Make login adjustments based on the dashboard, and set up the list buttons.

--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
@@ -153,4 +153,18 @@ body {
     height: 100%;
 }
 
-  
+.dashboard-icon-btn {
+    width : 250px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard-title {
+    color: var(--colorBlack);
+    font-weight: bold;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    font-family: Impact, sans-serif;
+}
