--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
@@ -173,3 +173,34 @@ body {
     letter-spacing: 1px;
     font-family: Impact, sans-serif;
 }
+.white-container-button {
+    background-color: var(--colorWhite);
+    border: none;
+}
+
+.table-container {
+    max-height: 700px;
+    overflow-y: auto;
+}
+
+    
+.table-container table thead {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
+}
+
+.table {
+    border-collapse: collapse;
+}
+
+    .table th {
+        background-color: #f5f5f5;
+        text-align: left;
+    }
+
+    .table td {
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
+    }
