--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/App.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/App.css
@@ -91,3 +91,27 @@ th, td {
     .logout-icon:hover {
         opacity: 0.7;
     }
+
+.scroll-container {
+    max-height: 100vh;
+    overflow-y: auto;
+}
+
+    
+    .scroll-container::-webkit-scrollbar {
+        width: 6px; 
+    }
+
+    .scroll-container::-webkit-scrollbar-track {
+        background: #f0f0f0; 
+        border-radius: 10px;
+    }
+
+    .scroll-container::-webkit-scrollbar-thumb {
+        background-color: #b5b5b5; 
+        border-radius: 10px;
+    }
+
+    .scroll-container::-webkit-scrollbar-thumb:hover {
+        background-color: #9a9a9a;
+    }
