Added functionality for get the invitation group for a user without one.

--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
@@ -203,7 +203,12 @@ body {
     max-height: 700px;
 }
 
-    
+.invitation-container {
+    overflow-y: auto;
+    max-height: 300px;
+}
+
+
 .table-container table thead {
     position: sticky;
     top: 0;
