--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/App.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/App.css
@@ -55,6 +55,10 @@ th, td {
     overflow: auto;
 }
 
+.image-container{
+    width : 80%;
+    height : 100%;
+}
 .app-title {
     color: var(--colorWhite);
     font-weight: bold;
