--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
@@ -1,4 +1,3 @@
-/*CSS form reusable components command general classes*/
 :root {
     --colorWhite: #ffffff;
     --colorLowGrey: #f5f6f7;
@@ -54,64 +53,67 @@ body {
 }
 
 .h-10 {
-    height: 10%;
+    height: 10vh;
 }
 
 .h-20 {
-    height: 20%;
+    height: 20vh;
 }
 
 .h-30 {
-    height: 30%;
+    height: 30vh;
 }
 
 .h-40 {
-    height: 40%;
+    height: 40vh;
 }
 .h-60 {
-    height: 60%;
+    height: 60vh;
 }
 
 .h-70 {
-    height: 70%;
+    height: 70vh;
 }
 
 .w-10 {
-    width: 10%;
+    width: 10vh;
 }
 
 .w-20 {
-    width: 20%;
+    width: 20vh;
 }
 
 .w-30 {
-    width: 30%;
+    width: 30vh;
 }
 
 .w-40 {
-    width: 40%;
+    width: 40vh;
 }
 
 .w-60 {
-    width: 60%;
+    width: 60vh;
 }
 
 .w-70 {
-    width: 70%;
+    width: 70vh;
 }
 .w-80 {
-    width: 80%;
+    width: 80vh;
 }
 .w-90 {
-    width: 90%;
+    width: 90vh;
 }
 
 
 .grey-container {
-    border-color : var(--colorBordersAndSplitters);
-    background-color : var(--colorLowGrey);
-    border-radius :5px;
-
+    border-color: var(--colorBordersAndSplitters);
+    background-color: var(--colorLowGrey);
+    border-radius: 5px;
+    max-height: 695px; 
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 .white-container {
@@ -200,8 +202,34 @@ body {
 }
 
 .table-container {
-    max-height: 700px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
+
+.table-scroll {
+    flex: 1;
+    overflow-y: auto;
+    padding-right: 5px;
+}
+
+    .table-scroll::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    .table-scroll::-webkit-scrollbar-track {
+        background: #f0f0f0;
+        border-radius: 10px;
+    }
+
+    .table-scroll::-webkit-scrollbar-thumb {
+        background-color: #b5b5b5;
+        border-radius: 10px;
+    }
+
+    .table-scroll::-webkit-scrollbar-thumb:hover {
+        background-color: #9a9a9a;
+    }
 
 .invitation-container {
     overflow-y: auto;
@@ -268,4 +296,40 @@ body {
 .status-maintenance {
     color: #616161;
     border-color: #9e9e9e;
+}
+
+.pagination-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+    .pagination-container select {
+        border-radius: 6px;
+        border: 1px solid #ccc;
+    }
+
+.pagination-buttons button {
+    margin: 0 4px;
+    padding: 6px 12px;
+    color: var(--colorText);
+    border: 2px solid var(--colorBordersAndSplitters);
+    border-radius: 8px 8px;
+    background-color: var(--colorLowYellow);
+}
+
+.pagination-buttons button:hover:not(:disabled) {
+    background-color: var(--colorDarkGrey);
+}
+
+    .pagination-buttons button:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+        border: none
+    }
+
+.pagination-fixed {
+    padding-top: 10px;
+    border-top: 1px solid #ddd;
+    background: #f8f8f8;
 }
