Added functionality to insert prints images on post print function, and updated the init.sql file

--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
@@ -110,7 +110,7 @@ body {
     border-color: var(--colorBordersAndSplitters);
     background-color: var(--colorLowGrey);
     border-radius: 5px;
-    max-height: 695px; 
+    max-height: max-content; 
     display: flex;
     flex-direction: column;
     overflow: hidden;
