--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
@@ -8,6 +8,7 @@
     --colorYellow: #ffd54a;
     --colorLowYellow: #fcdd74;
     --colorBlack: #000000;
+    --colorRed: #ba2020;
 }
 
 html, body {
