Update printer fucntionality and page

--- a/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/src/index.css
@@ -167,6 +167,17 @@ fs-detail{
         background-color: var(--colorWhite);
     }
 
+.input-value-3 {
+    background-color: var(--colorLowGrey);
+    border: none;
+    border-radius: 6px;
+    color: var(--colorBlack)
+}
+
+    .input-value-3:disabled {
+        background-color: var(--colorWhite);
+    }
+
 .button-yellow {
     background-color: var(--colorYellow); 
     color: var(--colorText); 
